--- a/OGPP-Offerta-Domanda/index.html
+++ b/OGPP-Offerta-Domanda/index.html
@@ -1004,7 +1004,7 @@
                         
                         <div class="formula-box">
                             <span class="formula-label">Elasticità della Domanda</span>
-                            <div class="formula-main">$$E_{d,p} = \\frac{\\Delta\\% \\, Q}{\\Delta\\% \\, P}</div>
+                            <div class="formula-main">$$E_{d,p} = \\frac{\\Delta\\% \\, Q}{\\Delta\\% \\, P}$$</div>
                             <div class="formula-description">Rapporto tra variazione percentuale della quantità e variazione percentuale del prezzo</div>
                         </div>
 
