Fix formatting of light messages paragraph

--- a/InterrogazioneInglesePhotography/index.html
+++ b/InterrogazioneInglesePhotography/index.html
@@ -552,7 +552,7 @@
                         <p>Visible light is the only type of electromagnetic energy that we can see with the <span class="vocab-highlight">naked</span> eye. The sun is our main source of visible light, but it can also be emitted by fire, light bulbs, and other devices. Light is what gives things their visible form, shape, texture, and colour, but, over the centuries, light has been used as a form of communication, too.</p>
 
                         <h4>Light messages</h4>
-                        <p>In ancient times, light was used to convey messages through fire, and the Romans used polished metallic <span class="vocab-highlight">plates</span> for sunlight reflection to carry out long distance signalling. Later on, ships started using used signal lamps to transmit messages in Morse code.</p>
+                        <p>In ancient times, light was used to convey messages through fire, and the Romans used polished metallic <span class="vocab-highlight">plates</span> for sunlight reflection to carry out long distance signalling. Later on, ships started using signal lamps to transmit messages in Morse code.</p>
 
                         <h4>Light in art</h4>
                         <p>Light and <span class="vocab-highlight">shadow</span> have always been extremely important in art to communicate concepts and have viewers focus on specific details, too. For example, Caravaggio created dramatic paintings that showed the mass of the human form and the three-dimensional experience of space through the use of <em>chiaroscuro</em>, a strong contrast of light and darkness achieved by a single directional light source that <span class="vocab-highlight">shone</span> intensely on the main subject.</p>
